# SimSwarm

./: .env.example  .env.production  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Caddyfile  Dockerfile  LICENSE  NOTICE  README.md  alembic.ini  celerybeat-schedule-shm  celerybeat-schedule-wal  deploy.sh  docker-compose.yml  pyproject.toml
.githooks/: pre-push
alembic/: env.py
demos/: bitcoin-halving.json  dream-red-chamber.json  eu-ai-act.json  iran-war-us-china.json  tesla-earnings.json
docs/: 2026-04-24-restart-sim-kebab-design.md  miroshark-comparison.md  oasis-paper-analysis.md  tier-differentiation.md
docs-site/: docusaurus.config.ts  openapi.json  package-lock.json  package.json  sidebars.ts
frontend/: index.html  package-lock.json  package.json  playwright.config.js  tailwind.config.js  vite.config.js
saas/: config.py  database.py  health.py  limiter.py  logging.py  main.py  router.py  tiers.py
scripts/: dump_openapi.py  export_demos.py
simswarm/: __init__.py  adapter.py  belief.py  bridge.py  engine.py  entities.py  extractor.py  extractor_activity.py  extractor_common.py  extractor_market_social.py  extractor_posts.py  graph.py  llm.py  personas.py  relations.py  report.py  report_tools.py  stance.py  story_signals.py  story_signals_constants.py  story_signals_scale.py  sweep.py  types.py
tests/: _recovery_helpers.py  conftest.py  test_ai_module.py  test_alerts.py  test_alerts_edges.py  test_api_draft_branches.py  test_api_share_branches.py  test_atomic_job_creation.py  test_auth.py  test_auth_api_branches.py  test_auth_demo_mode.py  test_auth_dependencies.py  test_auth_profile_branches.py  test_benchmark_integration.py  test_benchmark_report.py  test_benchmark_script.py  test_billing_api.py  test_billing_api_branches.py  test_billing_balance.py  test_billing_e2e.py  test_billing_purchase.py  test_billing_webhook.py  test_celery_tasks.py  test_cleanup.py  test_cleanup_branches.py  test_concurrent_debit.py  test_config.py  test_credit_packs.py  test_database.py  test_database_helpers.py  test_demos_import.py  test_dispatch_recovery.py  test_drafts.py  test_dump_openapi.py  test_e2e.py  test_e2e_helpers.py  test_e2e_jobs.py  test_email_verification.py  test_enrichment.py  (+94 more)
(+664 files in other folders)
