[project]
name = "fishcloud"
version = "0.1.0"
description = "MiroFish Hosted SaaS layer"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.1",
    "stripe>=11.0.0",
    "celery[redis]>=5.4.0",
    "bcrypt>=4.2.0",
    "pyjwt>=2.9.0",
    "runpod>=1.7.0",
    "httpx>=0.28.0",
    "reportlab>=4.0.0",
    "slowapi>=0.1.9",
    "psycopg2-binary>=2.9.0",
    "openai>=1.60.0",
    "minio>=7.2.0",
    "anthropic==0.94.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.28.0",
    "aiosqlite>=0.20.0",
    "ruff>=0.8.0",
    "flask>=3.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["saas"]
concurrency = ["greenlet", "thread"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/alembic/*",
    "saas/main.py",
    "saas/workers/celery_app.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 90
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "\\.\\.\\.",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["saas*"]

[tool.ruff]
line-length = 100
